--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "init": "./init.js"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-n": "^16.3.1",
