--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "repository": {
     "url": "holymos/eslint-config-holymos"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "peerDependencies": {
     "typescript": ">=5"
   },
@@ -40,6 +43,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5"
   }
 }
