ci: add lint and test workflow

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "holymos/eslint-config-holymos"
   },
   "scripts": {
+    "lint": "eslint .",
     "test": "jest"
   },
   "peerDependencies": {
