--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.2.5"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
