--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@holymos/eslint-config",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "private": false,
   "description": "ESLint configuration.",
   "main": "index.js",
@@ -35,16 +35,16 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "inquirer": "^9.2.15",
     "js-yaml": "^4.1.0",
     "lodash.merge": "^4.6.2",
-    "prettier": "^3.2.5"
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5"
   }
 }
