--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,26 +4,15 @@
     "node": true,
     "jest": true
   },
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": ["prettier", "eslint-plugin-import-helpers"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "plugins": ["simple-import-sort"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "rules": {
-    "prettier/prettier": "error",
-    "import-helpers/order-imports": [
-      "warn",
-      {
-        "newlinesBetween": "always",
-        "groups": [
-          "module",
-          "/^@assets|@components|@lib|@pages|@styles|@utils/",
-          ["parent", "sibling", "index"]
-        ],
-        "alphabetize": { "order": "asc", "ignoreCase": true }
-      }
-    ]
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error"
   }
 }
