--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "js-yaml": "^4.1.0",
     "lodash.merge": "^4.6.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.2.5",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
@@ -44,7 +46,6 @@
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash.merge": "^4.6.9",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5"
+    "jest": "^29.7.0"
   }
 }
